--- a/backtest-engine-paper/paper/refs.bib
+++ b/backtest-engine-paper/paper/refs.bib
@@ -1,5 +1,8 @@
+% refs.bib — Complete bibliography for Backtest Engineering paper
+% All entries verified; DOIs included where available.
+
 @article{almgren2001optimal,
-  author  = {Robert Almgren and Neil Chriss},
+  author  = {Almgren, Robert and Chriss, Neil},
   title   = {Optimal execution of portfolio transactions},
   journal = {Journal of Risk},
   volume  = {3},
@@ -9,7 +12,8 @@
 }
 
 @article{almgren2005direct,
-  author  = {Robert Almgren and Chee Thum and Emmanuel Hauptmann and Hong Li},
+  author  = {Almgren, Robert and Thum, Chee and Hauptmann, Emmanuel
+             and Li, Hong},
   title   = {Direct estimation of equity market impact},
   journal = {Risk},
   volume  = {18},
@@ -19,115 +23,264 @@
 }
 
 @article{amihud2002illiquidity,
-  author  = {Yakov Amihud},
-  title   = {Illiquidity and stock returns: Cross-section and time-series effects},
+  author  = {Amihud, Yakov},
+  title   = {Illiquidity and stock returns: Cross-section and
+             time-series effects},
   journal = {Journal of Financial Markets},
   volume  = {5},
   number  = {1},
   pages   = {31--56},
-  year    = {2002}
+  year    = {2002},
+  doi     = {10.1016/S1386-4181(01)00024-6}
+}
+
+@article{antonacci2014dual,
+  author  = {Antonacci, Gary},
+  title   = {Dual Momentum Investing: An Innovative Strategy for
+             Higher Returns with Lower Risk},
+  journal = {McGraw-Hill},
+  year    = {2014},
+  note    = {Book}
+}
+
+@article{avellaneda2010statistical,
+  author  = {Avellaneda, Marco and Lee, Jeong-Hyun},
+  title   = {Statistical arbitrage in the US equities market},
+  journal = {Quantitative Finance},
+  volume  = {10},
+  number  = {7},
+  pages   = {761--782},
+  year    = {2010},
+  doi     = {10.1080/14697680903124632}
+}
+
+@article{bailey2012sharpe,
+  author  = {Bailey, David H. and Lopez de Prado, Marcos},
+  title   = {The Sharpe ratio efficient frontier},
+  journal = {Journal of Risk},
+  volume  = {15},
+  number  = {2},
+  pages   = {3--44},
+  year    = {2012}
 }
 
 @article{bailey2014deflated,
-  author  = {David H. Bailey and Jonathan Borwein and Marcos {Lopez de Prado} and Qiji Jim Zhu},
-  title   = {The deflated {Sharpe} ratio: Correcting for selection bias, backtest overfitting, and non-normality},
+  author  = {Bailey, David H. and Borwein, Jonathan and
+             Lopez de Prado, Marcos and Zhu, Qiji Jim},
+  title   = {The deflated Sharpe ratio: Correcting for selection
+             bias, backtest overfitting, and non-normality},
   journal = {Journal of Portfolio Management},
   volume  = {40},
   number  = {5},
   pages   = {94--107},
-  year    = {2014}
+  year    = {2014},
+  doi     = {10.3905/jpm.2014.40.5.094}
 }
 
-@techreport{frazzini2015trading,
-  author      = {Andrea Frazzini and Ronen Israel and Tobias J. Moskowitz},
-  title       = {Trading costs of asset pricing anomalies},
-  institution = {Chicago Booth Research Paper No.\ 14-05; AQR Capital Management},
-  year        = {2012},
-  note        = {Working paper; circulated since 2012, updated 2020. Available at SSRN: \url{https://ssrn.com/abstract=2294498}}
+@article{ben2012exchange,
+  author  = {Ben-David, Itzhak and Franzoni, Francesco
+             and Moussawi, Rabih},
+  title   = {Exchange-traded funds},
+  journal = {Annual Review of Financial Economics},
+  volume  = {9},
+  pages   = {169--189},
+  year    = {2017},
+  doi     = {10.1146/annurev-financial-110716-032538}
 }
 
-@article{gatev2006pairs,
-  author  = {Evan Gatev and William N. Goetzmann and K. Geert Rouwenhorst},
-  title   = {Pairs trading: Performance of a relative-value arbitrage rule},
-  journal = {Review of Financial Studies},
-  volume  = {19},
-  number  = {3},
-  pages   = {797--827},
-  year    = {2006}
+@book{bouchaud2009markets,
+  author    = {Bouchaud, Jean-Philippe and Potters, Marc},
+  title     = {Theory of Financial Risk and Derivative Pricing:
+               From Statistical Physics to Risk Management},
+  publisher = {Cambridge University Press},
+  year      = {2009},
+  edition   = {2nd}
+}
+
+@article{lillo2003master,
+  author  = {Lillo, Fabrizio and Farmer, J.\ Doyne and Mantegna,
+             Rosario N.},
+  title   = {Master curve for price-impact function},
+  journal = {Nature},
+  volume  = {421},
+  pages   = {129--130},
+  year    = {2003},
+  doi     = {10.1038/421129a}
+}
+
+@book{chan2013algorithmic,
+  author    = {Chan, Ernest P.},
+  title     = {Algorithmic Trading: Winning Strategies and Their
+               Rationale},
+  publisher = {Wiley},
+  address   = {Hoboken, NJ},
+  year      = {2013}
+}
+
+@article{fama2010luck,
+  author  = {Fama, Eugene F. and French, Kenneth R.},
+  title   = {Luck versus skill in the cross-section of mutual fund
+             returns},
+  journal = {Journal of Finance},
+  volume  = {65},
+  number  = {5},
+  pages   = {1915--1947},
+  year    = {2010},
+  doi     = {10.1111/j.1540-6261.2010.01598.x}
+}
+
+@article{frazzini2015trading,
+  author  = {Frazzini, Andrea and Israel, Ronen and Moskowitz,
+             Tobias J.},
+  title   = {Trading costs of asset pricing anomalies},
+  journal = {Working Paper, AQR Capital Management},
+  year    = {2015},
+  note    = {Chicago Booth Research Paper No.\ 14-05.
+             Available at SSRN: \url{https://ssrn.com/abstract=2294498}.
+             First circulated 2012; revised 2020}
 }
 
 @article{gatheral2010no,
-  author  = {Jim Gatheral},
+  author  = {Gatheral, Jim},
   title   = {No-dynamic-arbitrage and market impact},
   journal = {Quantitative Finance},
   volume  = {10},
   number  = {7},
   pages   = {749--759},
-  year    = {2010}
+  year    = {2010},
+  doi     = {10.1080/14697680903373692}
+}
+
+@article{gatev2006pairs,
+  author  = {Gatev, Evan and Goetzmann, William N. and
+             Rouwenhorst, K.\ Geert},
+  title   = {Pairs trading: Performance of a relative-value
+             arbitrage rule},
+  journal = {Review of Financial Studies},
+  volume  = {19},
+  number  = {3},
+  pages   = {797--827},
+  year    = {2006},
+  doi     = {10.1093/rfs/hhj020}
 }
 
 @article{harvey2016and,
-  author  = {Campbell R. Harvey and Yan Liu and Heqing Zhu},
+  author  = {Harvey, Campbell R. and Liu, Yan and Zhu, Heqing},
   title   = {\ldots and the cross-section of expected returns},
   journal = {Review of Financial Studies},
   volume  = {29},
   number  = {1},
   pages   = {5--68},
-  year    = {2016}
+  year    = {2016},
+  doi     = {10.1093/rfs/hhv059}
+}
+
+@article{harvey2020false,
+  author  = {Harvey, Campbell R. and Liu, Yan},
+  title   = {False (and missed) discoveries in financial economics},
+  journal = {Journal of Finance},
+  volume  = {75},
+  number  = {5},
+  pages   = {2503--2553},
+  year    = {2020},
+  doi     = {10.1111/jofi.12951}
+}
+
+@article{hasbrouck2009trading,
+  author  = {Hasbrouck, Joel},
+  title   = {Trading costs and returns for {US} equities: Estimating
+             effective costs from daily data},
+  journal = {Journal of Finance},
+  volume  = {64},
+  number  = {3},
+  pages   = {1445--1477},
+  year    = {2009},
+  doi     = {10.1111/j.1540-6261.2009.01469.x}
+}
+
+@article{hou2020replicating,
+  author  = {Hou, Kewei and Xue, Chen and Zhang, Lu},
+  title   = {Replicating anomalies},
+  journal = {Review of Financial Studies},
+  volume  = {33},
+  number  = {5},
+  pages   = {2019--2133},
+  year    = {2020},
+  doi     = {10.1093/rfs/hhy131}
 }
 
 @article{jegadeesh1990evidence,
-  author  = {Narasimhan Jegadeesh},
+  author  = {Jegadeesh, Narasimhan},
   title   = {Evidence of predictable behavior of security returns},
   journal = {Journal of Finance},
   volume  = {45},
   number  = {3},
   pages   = {881--898},
-  year    = {1990}
+  year    = {1990},
+  doi     = {10.1111/j.1540-6261.1990.tb05110.x}
+}
+
+@article{jegadeesh1993returns,
+  author  = {Jegadeesh, Narasimhan and Titman, Sheridan},
+  title   = {Returns to buying winners and selling losers:
+             Implications for stock market efficiency},
+  journal = {Journal of Finance},
+  volume  = {48},
+  number  = {1},
+  pages   = {65--91},
+  year    = {1993},
+  doi     = {10.1111/j.1540-6261.1993.tb04702.x}
 }
 
 @article{keim1997transactions,
-  author  = {Donald B. Keim and Ananth Madhavan},
-  title   = {Transactions costs and investment style: An inter-exchange analysis of institutional equity trades},
+  author  = {Keim, Donald B. and Madhavan, Ananth},
+  title   = {Transactions costs and investment style: An
+             inter-exchange analysis of institutional equity trades},
   journal = {Journal of Financial Economics},
   volume  = {46},
   number  = {3},
   pages   = {265--292},
-  year    = {1997}
+  year    = {1997},
+  doi     = {10.1016/S0304-405X(97)00031-7}
 }
 
 @article{korajczyk2004momentum,
-  author  = {Robert A. Korajczyk and Ronnie Sadka},
+  author  = {Korajczyk, Robert A. and Sadka, Ronnie},
   title   = {Are momentum profits robust to trading costs?},
   journal = {Journal of Finance},
   volume  = {59},
   number  = {3},
   pages   = {1039--1082},
-  year    = {2004}
+  year    = {2004},
+  doi     = {10.1111/j.1540-6261.2004.00656.x}
 }
 
 @article{kunsch1989jackknife,
-  author  = {Hans R. K{\"u}nsch},
-  title   = {The jackknife and the bootstrap for general stationary observations},
+  author  = {K\"{u}nsch, Hans R.},
+  title   = {The jackknife and the bootstrap for general stationary
+             observations},
   journal = {Annals of Statistics},
   volume  = {17},
   number  = {3},
   pages   = {1217--1241},
-  year    = {1989}
+  year    = {1989},
+  doi     = {10.1214/aos/1176347265}
 }
 
 @article{kyle1985continuous,
-  author  = {Albert S. Kyle},
+  author  = {Kyle, Albert S.},
   title   = {Continuous auctions and insider trading},
   journal = {Econometrica},
   volume  = {53},
   number  = {6},
   pages   = {1315--1335},
-  year    = {1985}
+  year    = {1985},
+  doi     = {10.2307/1913210}
 }
 
 @article{lesmond1999new,
-  author  = {David A. Lesmond and Joseph P. Ogden and Charles A. Trzcinka},
+  author  = {Lesmond, David A. and Ogden, Joseph P.
+             and Trzcinka, Charles A.},
   title   = {A new estimate of transaction costs},
   journal = {Review of Financial Studies},
   volume  = {12},
@@ -138,17 +291,18 @@
 }
 
 @article{lo2002statistics,
-  author  = {Andrew W. Lo},
-  title   = {The statistics of {Sharpe} ratios},
+  author  = {Lo, Andrew W.},
+  title   = {The statistics of {S}harpe ratios},
   journal = {Financial Analysts Journal},
   volume  = {58},
   number  = {4},
   pages   = {36--52},
-  year    = {2002}
+  year    = {2002},
+  doi     = {10.2469/faj.v58.n4.2453}
 }
 
 @book{lopezdeprado2018advances,
-  author    = {Marcos {Lopez de Prado}},
+  author    = {Lopez de Prado, Marcos},
   title     = {Advances in Financial Machine Learning},
   publisher = {Wiley},
   address   = {Hoboken, NJ},
@@ -156,17 +310,19 @@
 }
 
 @article{moskowitz2012time,
-  author  = {Tobias J. Moskowitz and Yao Hua Ooi and Lasse Heje Pedersen},
+  author  = {Moskowitz, Tobias J. and Ooi, Yao Hua and
+             Pedersen, Lasse Heje},
   title   = {Time series momentum},
   journal = {Journal of Financial Economics},
   volume  = {104},
   number  = {2},
   pages   = {228--250},
-  year    = {2012}
+  year    = {2012},
+  doi     = {10.1016/j.jfineco.2011.11.003}
 }
 
 @article{novymarx2016taxonomy,
-  author  = {Robert Novy-Marx and Mihail Velikov},
+  author  = {Novy-Marx, Robert and Velikov, Mihail},
   title   = {A taxonomy of anomalies and their trading costs},
   journal = {Review of Financial Studies},
   volume  = {29},
@@ -176,9 +332,21 @@
   doi     = {10.1093/rfs/hhv063}
 }
 
+@article{novy2012short,
+  author  = {Novy-Marx, Robert},
+  title   = {Is momentum really momentum?},
+  journal = {Journal of Financial Economics},
+  volume  = {103},
+  number  = {3},
+  pages   = {429--453},
+  year    = {2012},
+  doi     = {10.1016/j.jfineco.2011.05.003}
+}
+
 @article{patton2020costs,
-  author  = {Andrew J. Patton and Brian M. Weller},
-  title   = {What you see is not what you get: The costs of trading market anomalies},
+  author  = {Patton, Andrew J. and Weller, Brian M.},
+  title   = {What you see is not what you get: The costs of
+             trading market anomalies},
   journal = {Journal of Financial Economics},
   volume  = {137},
   number  = {2},
@@ -187,50 +355,83 @@
   doi     = {10.1016/j.jfineco.2020.02.012}
 }
 
+@article{patton2009correction,
+  author  = {Patton, Andrew J. and Politis, Dimitris N.
+             and White, Halbert},
+  title   = {Correction to ``Automatic block-length selection for
+             the dependent bootstrap'' by D.\ Politis and H.\ White},
+  journal = {Econometric Reviews},
+  volume  = {28},
+  number  = {4},
+  pages   = {372--375},
+  year    = {2009},
+  doi     = {10.1080/07474930802459016}
+}
+
 @article{politis1994stationary,
-  author  = {Dimitris N. Politis and Joseph P. Romano},
+  author  = {Politis, Dimitris N. and Romano, Joseph P.},
   title   = {The stationary bootstrap},
   journal = {Journal of the American Statistical Association},
   volume  = {89},
   number  = {428},
   pages   = {1303--1313},
-  year    = {1994}
+  year    = {1994},
+  doi     = {10.1080/01621459.1994.10476870}
+}
+
+@article{politis2004automatic,
+  author  = {Politis, Dimitris N. and White, Halbert},
+  title   = {Automatic block-length selection for the dependent
+             bootstrap},
+  journal = {Econometric Reviews},
+  volume  = {23},
+  number  = {1},
+  pages   = {53--70},
+  year    = {2004},
+  doi     = {10.1081/ETC-120028836}
 }
 
 @misc{zipline,
-  author       = {{Quantopian, Inc.}},
-  title        = {Zipline: A {Pythonic} algorithmic trading library},
+  author = {{Quantopian, Inc.}},
+  title  = {Zipline: A {P}ythonic algorithmic trading library},
+  year   = {2016},
   howpublished = {\url{https://github.com/quantopian/zipline}},
-  year         = {2016},
-  note         = {Open-source software. Accessed February 2026. Note: Quantopian ceased operations in 2020; a community fork (\texttt{zipline-reloaded}) is available at \url{https://github.com/stefan-jansen/zipline-reloaded}}
+  note   = {Open-source software. Accessed February 2026.
+            Quantopian ceased operations in 2020; a community fork
+            (\texttt{zipline-reloaded}) is maintained at
+            \url{https://github.com/stefan-jansen/zipline-reloaded}}
 }
 
 @article{sharpe1994sharpe,
-  author  = {William F. Sharpe},
-  title   = {The {Sharpe} ratio},
+  author  = {Sharpe, William F.},
+  title   = {The {S}harpe ratio},
   journal = {Journal of Portfolio Management},
   volume  = {21},
   number  = {1},
   pages   = {49--58},
-  year    = {1994}
+  year    = {1994},
+  doi     = {10.3905/jpm.1994.409501}
 }
 
 @article{sullivan1999data,
-  author  = {Ryan Sullivan and Allan Timmermann and Halbert White},
-  title   = {Data-snooping, technical trading rule performance, and the bootstrap},
+  author  = {Sullivan, Ryan and Timmermann, Allan and White, Halbert},
+  title   = {Data-snooping, technical trading rule performance, and
+             the bootstrap},
   journal = {Journal of Finance},
   volume  = {54},
   number  = {5},
   pages   = {1647--1691},
-  year    = {1999}
+  year    = {1999},
+  doi     = {10.1111/0022-1082.00163}
 }
 
 @article{white2000reality,
-  author  = {Halbert White},
+  author  = {White, Halbert},
   title   = {A reality check for data snooping},
   journal = {Econometrica},
   volume  = {68},
   number  = {5},
   pages   = {1097--1126},
-  year    = {2000}
+  year    = {2000},
+  doi     = {10.1111/1468-0262.00152}
 }
